css fix for footer overlap issue#3

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,7 +17,6 @@
 .footer-container{
   bottom: 0;
   left:0;
-  position:fixed;
 }
 .footer{
   font-size: 10px;
